fixed spacing

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 
     width: 50vw;
     height: 60vh;
-    margin-left: 22.5vw;
+    margin-left: 22vw;
     padding: 2vw;
 }
 #about > p {
@@ -91,7 +91,7 @@ body {
 
     width: 18.5vw;
     height: 60vh;
-    margin-left: 76.5vw;
+    margin-left: 76vw;
     padding: 1vw;
     /* margin-top: 4vw; */
 }
